--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@daviderib/node-red-contrib-semilimes-connector",
-  "version": "1.0.4",
+  "name": "@daviderib/node-red-semilimes",
+  "version": "0.9.1",
   "description": "The new semilimes connector which integrates with the public API",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -67,7 +67,12 @@
     "semilimes",
     "iot",
     "connector",
-    "node-red"
+    "node-red",
+    "mobile phone",
+    "interface",
+    "remote access",
+    "ssh tunnel",
+    "websocket"
   ],
   "bugs": {
     "url": "https://github.com/semilimes/nodered-publicapi-connector/issues"
