--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@semilimes/node-red-semilimes",
-  "version": "0.9.5",
+  "version": "0.9.6",
   "description": "The new semilimes connector which integrates with the public API",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,6 +19,7 @@
       "sme-main-formSaver": "src/sme-main-formSaver.js",
       "sme-main-formLoader": "src/sme-main-formLoader.js",
       "sme-main-formUpdater": "src/sme-main-formUpdater.js",
+      "sme-main-uploader": "src/sme-main-uploader.js",
       "sme-comp-text": "src/data-components/sme-comp-text.js",
       "sme-comp-html": "src/data-components/sme-comp-html.js",
       "sme-comp-file": "src/data-components/sme-comp-file.js",
@@ -51,17 +52,18 @@
     }
   },
   "dependencies": {
+    "axios": "^1.6.5",
+    "form-data": "^4.0.0",
     "node-forge": "^1.3.1",
     "ssh2": "^1.11.0",
     "ws": "^8.2.3"
   },
   "engines": {
     "node": ">=12.0.0"
-  },  
+  },
   "directories": {
     "example": "examples"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/semilimes/nodered-publicapi-connector.git"
